# batteryTester3

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  ILI9341_extended.cpp  ILI9341_extended.h  README.md  ad_timer.h  batterySensor.cpp  batterySensor.h  batteryTester2.ino  calibration.cpp  compile_commands.json  dso_eeprom.cpp  dso_eeprom.h  graphicstest.ino  heap.cpp  hwSettings.h  items.cpp  mainCode.cpp  mcuSelect.cmake  myPinout.h  push_button.cpp  screenBase.cpp  screenBase.h  screenCalibration.cpp  screenCalibration.h  screenDischarging.cpp  screenDischarging.h  screenError.cpp  screenError.h  screenFinished.cpp  screenFinished.h  screenIdle.cpp  screenIdle.h  screenInclude.h  screenSetup.cpp  screenSetup.h  screenSetup_internal.h  settings.h  (+2 more)
TFT_eSPI/: CMakeLists.txt  TFT_eSPI_Custom.c  TFT_eSPI_Custom.h  TFT_eSPI_extended.cpp  TFT_eSPI_extended.h  TFT_eSPI_extended_glyph.cpp  TFT_eSPI_extended_glyph_hl.cpp  User_Setup.h
XPT2046/: CMakeLists.txt  xpt2046.cpp  xpt2046.h
assets/: CMakeLists.txt
assets/backgrounds/: CMakeLists.txt  assets.cpp  convertHS.py  fonts.cpp  gfxfont.h  update.sh  updateHS.sh
assets/fonts/: 1bit.h  FreeSans18pt7b.h  FreeSans32pt7b.h  FreeSans9pt7b.h  updateFonts.h  updateFonts.sh
backgrounds/: CMakeLists.txt  background.h  convert.py  convert.sh  fonts.cpp  li_ion.h  update.sh
enclosure/: bat_tester2.fcstd
extendedIli9341/: Adafruit_GFX.cpp  ILI9341_extended.cpp  ILI9341_extended.h  ILI9341_extended_glyph.cpp
include/: ad_timer.h  adc_engine.h  batterySensor.h  myPinout.h  screenBase.h  screenFinished.h  screenInclude.h  voltage.h
patches/: spi_dma_async_patch2.diff  weak_i2c.diff
schematics/: constant_currant_sim.sch
schematics/batteryTester/: batteryTester-cache.lib  batteryTester.pro  batteryTester.sch  batteryTester.sch-bak
schematics/batteryTesterLc/: tester-cache.lib  tester.pro  tester.sch  tester.sch-bak
schematics/qucs-spice/: experimental.dat.ngspice  experimental.sch  experimental2.dat.ngspice  experimental2.sch  netlist.cir  new_version.dat.ngspice  new_version.sch  oldVersion.dat.ngspice  oldVersion.sch  simple.dat.ngspice  simple.sch  simple_no_so_consrant_current.dat.ngspice  simple_no_so_consrant_current.sch  try.dat.ngspice  try.sch
src/: CMakeLists.txt  batterySensor.cpp  calibration.cpp  dso_eeprom.h  heap.cpp  mainCode.cpp  push_button.h  screenBase.h  screenCalibration.cpp  screenDischarging.cpp  screenFinished.h  screenSetup_internal.h  settings.cpp
src/utils/: adc_engine.cpp  calibration.cpp  dso_eeprom.cpp  push_button.cpp
