    
ADD_LIBRARY(  sourceLib
            #batterySensor.cpp
            #calibration.cpp
            #dso_eeprom.cpp
            
            #items.cpp
            mainCode.cpp
            #push_button.cpp
            #screenBase.cpp
            #screenCalibration.cpp
            #screenDischarging.cpp
            ##screenError.cpp
            #screenFinished.cpp
            #screenIdle.cpp
            #screenSetup.cpp
            #settings.cpp
)

      
